crates/nx-syntax/tests/fixtures/valid/component-full.nx
component <SearchBox
  placeholder:string = "Find docs"
  emits {
    SearchRequested {
      query:string
    }
    Cleared {}
  }
/> = {
  state {
    query:string
  }

  <TextInput value={query} placeholder={placeholder} />
}
