crates/nx-syntax/tests/fixtures/invalid/component-invalid-state.nx
component <SearchBox /> = {
  state query:string
  <TextInput />
}
